--- a/test-2.html
+++ b/test-2.html
@@ -13,9 +13,11 @@
 
     <ul>
 
-        <li><a>https://www.nytimes.com</a></li>
-        <li><a>http://www.cnn.com"</a></li>
-        <li><a>http://www.latimes.com/</a></li>
+    
+    
+        <a href="https://www.nytimes.com">nytimes.com</a>
+        <a href="http://www.cnn.com">cnn.com</a>
+        <a href="http://www.latimes.com/">latimes.com</a>
 
 
 
